--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
     <description>demo</description>
     <properties>
         <java.version>17</java.version>
+        <springfox.version>3.0.0</springfox.version>
     </properties>
     <dependencies>
         <dependency>
