--- a/Kafka-SDK/src/main/resources/application.yaml
+++ b/Kafka-SDK/src/main/resources/application.yaml
@@ -2,4 +2,32 @@ server:
   port: 10002
 spring:
   kafka:
-    bootstrap-servers: 127.0.0.1:9092
+    bootstrap-servers: 192.168.0.1:9092,192.168.0.2:9092,192.168.0.3:9092
+    producer:
+      # 消息发送确认方式，默认为0，表示不等待确认，1表示等待leader确认，-1表示等待所有副本确认
+      acks: 0
+      # 消息重试次数，默认为0不重试
+      retries: 3
+      # 发送缓冲区大小，默认为33554432
+      buffer-memory: 33554432
+      # 发送数据的压缩类型，默认为none
+      compression-type: none
+    consumer:
+      # 消费组ID
+      group-id: test-group
+      # 消费者每次poll的最大数量
+      max-poll-records: 100
+      # 消息自动提交的时间间隔，单位为ms
+      auto-commit-interval: 1000
+      # 是否自动提交offset，默认为true
+      enable-auto-commit: true
+      # 从最早的消息开始消费，earliest表示从最早的消息开始消费，latest表示从最新的消息开始消费
+      auto-offset-reset: earliest
+
+kafka:
+  config:
+    topic: test
+    consumer:
+      groupId: testGroup
+    producer:
+      topic: test
